20xx-xx-xx  TODO
	* setf-values

2011-10-31  bowbow99  <bowbow99@gmail.com>

	* setf function 周りのテスト書いた
	- ちらほら見つかったバグを修正
	- 微妙にリファクタリング

2011-10-27  bowbow99  <bowbow99@gmail.com>

	* 型指定子 `real` と `cons` を引き通付きで使えない問題への fix を
	追加。
	※グローバルな変更による本体側のバグ修正なども、問題無さそうなら
	ansify でやる事にした。

2011-10-24  bowbow99  <bowbow99@gmail.com>

	* setf function のサポート拡大
	- `ansify:fboundp`
	- `ansify:fmakunbound`

2011-10-18  bowbow99  <bowbow99@gmail.com>

	* setf function	（関数名として `(setf READER)` という形式のリスト）
	を使えるように
	とりあえず以下2つだけ
	- `ansify:defun`
	- `ansify:fdefinition`

2011-10-16  bowbow99  <bowbow99@gmail.com>

	* 設定用変数を別ファイルに分離

2011-10-15  bowbow99  <bowbow99@gmail.com>

	* パッケージ "ansify.ext" を追加
	ANSI で定義されてるもの以外を export するためのパッケージ。今のと
	ころ設定用変数と関数いくつか

	* パッケージ "ansify" から標準のシンボルを export
	普通に `ansify:etypecase` 等で触れるように。
	これに伴って `ansify::install` で "ansify" を use-package するのを
	やめた。

2011-10-13  bowbow99  <bowbow99@gmail.com>

	* `ansify::optimize-type-check` が `deftype` より `defstruct` で
	定義した型を優先してたバグを修正。

2011-10-12  bowbow99  <bowbow99@gmail.com>

	* 不正な型指定子でエラー投げるように
	- symbol でも list でもない
	- car が symbol じゃない list
	- compound-only な連中（`and`, `not` など）が symbol のみ
	- `satisfies` の PREDICATE が symbol じゃない

	* `lisp:eql` のバグってる型情報を削除する fix を追加。
	`lisp:typep` だと（`si:canonicalize-type` しない限り）使われないの
	で問題無いのだけど、`ansify::typep` では常に canonicalize するよう
	にしたので邪魔になった。

2011-10-11  bowbow99  <bowbow99@gmail.com>

	* エラー `print-not-readable` を追加

	* コンディション関係のシンボルを shadowing-export しておいた。
	- `style-warning`
	- `print-not-readable`
	- `print-not-readable-object`

	* `print-unreadable-object` が `*print-readably*` を無視してたバグ
	を修正。

2011-10-07  bowbow99  <bowbow99@gmail.com>

	* `ansify::upgraded-complex-part-type` を追加。
	;; 返す値がこれであってるのかあまり自信がない。
	指定された型が real じゃない場合には（とりあえず）エラーを投げるよう
	にしておいた。

	* `ansify::typep` で `(complex PART-TYPE)` の PART-TYPE に derived
	type specifier を指定されたら展開するように。

2011-10-05  bowbow99  <bowbow99@gmail.com>

	* `ansify::typep` で derived type specifier を上手く展開できないこと